jekyll 구성 오류 수정

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,5 +2,6 @@
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
     <li class="nav-portfolio" role="menuitem"><a href="{{site.baseurl}}tag/Portfolio/">PORTFOLIO</a></li>
+    <li class="nav-devlog" role="menuitem"><a href="{{site.baseurl}}tag/devlog/">DEVLOG</a></li>
     <!-- <li class="nav-try-ghost" role="menuitem"><a href="https://ghost.org">Try Ghost</a></li> -->
 </ul>
